--- a/locomotive/cli/templates/journey.mustache
+++ b/locomotive/cli/templates/journey.mustache
@@ -1,8 +1,8 @@
 <b>Proposal {{departure_date}} - {{arrival_date}} ({{duration}})</b>
 <b>Prices</b>
-{{#prices}}
-+ {{amount}} {{currency}} ({{type}}) [{{seats}} remaining seats]
-{{/prices}}
+{{#proposals}}
++ {{amount}} {{currency}} ({{type}})
+{{/proposals}}
 <b>Trains</b>
 {{#segments}}
 + {{transporter}} {{train_number}} from {{origin_station}} to {{destination_station}}
