Consistent use of departure and arrival

--- a/locomotive/cli/templates/journey.mustache
+++ b/locomotive/cli/templates/journey.mustache
@@ -5,6 +5,6 @@
 {{/proposals}}
 <b>Trains</b>
 {{#segments}}
-+ {{transporter}} {{train_number}} from {{origin_station}} to {{destination_station}}
++ {{transporter}} {{train_number}} from {{departure_station}} to {{arrival_station}}
   {{departure_date}} - {{arrival_date}} ({{duration}})
 {{/segments}}
